ex4/testdata/typechecker/error/WhileTest-err1.java
class WhileTest {
	public static void main(String[] a){
            while(3) {} // TE
	}
}
